--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "next start",
     "lint": "next lint",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build" 
+    "deploy": "gh-pages -d build" ,
+    "export": "next build && next export"
   },
   "dependencies": {
     "axios": "^1.7.7",
